# CMD

./: .gitignore  CMakeLists.txt  README.md
include/: CGRA.h  CGRAMem.h  CGRANode.h  DFG.h  DFGNode.h  DataMemNode.h  DataNode.h  LoopsDFG.h  Mapper.h  Refinement.h
src/: CGRA.cpp  CGRAMem.cpp  CGRANode.cpp  CMakeLists.txt  DFG.cpp  DFGNode.cpp  DataMemNode.cpp  DataNode.cpp  Mapper.cpp  Refinement.cpp  genDFGPass.cpp
src/CGRA_Generation/: CGRA.cpp
src/DFG_Generation/: DFG.cpp  DFGNode.cpp  DataMemNode.cpp  genDFGPass.cpp
test/: compile.sh  run.sh
test/2mm/: 2mm.h  compile.sh  run.sh
test/array_add/: _Z6kernelv.dot  array_add.bc  array_add.cpp  array_add.ll  compile.sh  run.sh
test/cnn/: compile.sh  kernel.c
test/fft/: fft.cpp  run.sh
test/floyd-warshall/: compile.sh  floyd-warshall.c  run.sh
test/gcn/: main.cpp  param.json  run.sh
test/gemm/: gemm.c  run.sh
test/gemver/: param.json  run.sh
test/hardware/: param.json  paramCGRA.json
test/kernel/: MappingResult.txt  _Z6kernelPfS_S_.dot  _Z6kernelPfS_S_S_S_.dot  compile.sh  config.json  increMapInput.json  kernel.bc  kernel.cpp  kernel.ll  kernel_fullname.dot  kernel_unroll.bc  kernel_unroll.ll  kernell.dot  kernell_unroll.dot  mrrg.dot  mrrg.json  mrrg.txt  param.json  run.sh
test/kernels/: Makefile
test/ld_store_conflict/: MappingResult.txt  config.json  mrrg.json  run.sh
test/levmarq/: levmarq.cpp  run.sh
test/mm/: param.json  run.sh
test/reduction-sum/: compile.sh  param.json  reduction-sum.cpp  run.sh
test/simple2loops/: MappingResult.txt  MappingTime.txt  compile.sh  kernel.dot  (+5 more)
(+633 files in other folders)
